--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <!-- ENCERRAMENTO ANTECIPADO -->
   <section id="earlyEndScreen" class="screen">
     <h2>Encerramento Antecipado do Checklist</h2>
-    <p>O encerramento antecipado deverá ser devidamente justificado e ficará registrado para fins administrativos e de auditoria.</p>
+    <p>O encerramento antecipado deverá ser devidamente justificado.</p>
 
     <form id="earlyEndForm">
       <textarea id="earlyEndReason" rows="5" placeholder="Descreva o motivo do encerramento antecipado" required></textarea>
