--- a/sobre.html
+++ b/sobre.html
@@ -20,73 +20,82 @@
 </header>
 
 <main class="app-container">
-  <section class="screen active">
+  <section class="screen active about">
 
-    <h2 style="margin-top:0;">📘 Sobre / Doutrina</h2>
-
-    <!-- Logos -->
-    <div style="display:flex;justify-content:center;align-items:center;gap:18px;margin:14px 0 10px;">
-      <img src="assets/logos/pcsc.png" alt="PCSC" style="height:46px;width:auto;" />
-      <img src="assets/logos/saer.png" alt="SAER" style="height:46px;width:auto;" />
+    <div class="about-header">
+      <h2 class="about-title">Sobre / Doutrina</h2>
+      <p class="about-subtitle">
+        Referências normativas e escopo do WebApp institucional para registro do Checklist Operacional RPAS.
+      </p>
     </div>
 
-    <!-- NOARP (logo principal do Sobre) -->
-    <img
-      src="assets/logos/noarp.png"
-      alt="NOARP"
-      style="display:block;margin:10px auto 18px;max-width:340px;width:80%;height:auto;"
-    />
+    <!-- Logos institucionais (mesmo padrão visual) -->
+    <div class="about-logos-row">
+      <img src="assets/logos/pcsc.png" alt="PCSC" class="about-logo about-logo-sm" />
+      <img src="assets/logos/saer.png" alt="SAER" class="about-logo about-logo-sm" />
+    </div>
+
+    <!-- Logos operacionais (destaque, equilibrados entre si) -->
+    <div class="about-logos-hero">
+      <img src="assets/logos/noarp.png" alt="NOARP" class="about-logo about-logo-lg" />
+      <img src="assets/logos/coarp.png" alt="COARP" class="about-logo about-logo-lg" />
+    </div>
 
     <div class="card">
-      <h3>📌 Finalidade</h3>
+      <h3>Finalidade</h3>
       <p>
-        Este repositório contém um WebApp institucional destinado à execução e registro do
-        Checklist Operacional de Aeronaves Remotamente Pilotadas (RPAS) no âmbito da Polícia Civil de Santa Catarina.
+        Este WebApp institucional tem por finalidade apoiar a execução e o registro do
+        <strong>Checklist Operacional de Aeronaves Remotamente Pilotadas (RPAS)</strong>
+        no âmbito da Polícia Civil de Santa Catarina, promovendo padronização, rastreabilidade e documentação.
       </p>
-      <p>O aplicativo foi desenvolvido como ferramenta de apoio operacional, com foco em:</p>
       <ul>
-        <li>padronização da execução do checklist;</li>
-        <li>registro temporal das fases;</li>
-        <li>cadeia de custódia digital do procedimento;</li>
-        <li>geração de documento (PDF) para registro e controle administrativo.</li>
+        <li>Padronização da execução do checklist;</li>
+        <li>Registro temporal das fases;</li>
+        <li>Cadeia de custódia digital (registro + integridade);</li>
+        <li>Geração de relatório em PDF para controle administrativo.</li>
       </ul>
     </div>
 
     <div class="card">
-      <h3>⚖️ Base Normativa</h3>
-      <p>O conteúdo do checklist segue integralmente, sem supressão ou criação de itens, a doutrina e normativas vigentes, em especial:</p>
-      <ul>
-        <li>Resolução nº 05/GAB/DGPC/PCSC, de 03 de março de 2023;</li>
-        <li>Doutrina COARP – Curso de Operador de Aeronaves Remotamente Pilotadas;</li>
-        <li>Diretrizes do NOARP / SAER / PCSC;</li>
-        <li>Normas da ANAC, DECEA e ANATEL aplicáveis ao uso de RPAS.</li>
-      </ul>
-      <p><strong>⚠️ O aplicativo não substitui, altera ou cria normas operacionais.</strong></p>
-    </div>
-
-    <div class="card">
-      <h3>🧭 Responsabilidade Operacional</h3>
+      <h3>Base normativa</h3>
       <p>
-        Este aplicativo não autoriza voo. A decisão de decolagem, condução da missão e pouso é exclusiva do Piloto em Comando,
-        que permanece integralmente responsável pela operação da aeronave, nos termos da legislação e da doutrina vigente.
+        O conteúdo do checklist segue integralmente a doutrina e normativas vigentes, sem supressão ou criação de itens, em especial:
+      </p>
+      <ul>
+        <li><strong>Resolução nº 05/GAB/DGPC/PCSC, de 03 de março de 2023</strong>;</li>
+        <li>Doutrina <strong>COARP</strong> – Curso de Operador de Aeronaves Remotamente Pilotadas;</li>
+        <li>Diretrizes do <strong>NOARP / SAER / PCSC</strong>;</li>
+        <li>Normas aplicáveis de <strong>ANAC, DECEA e ANATEL</strong> para operações com RPAS.</li>
+      </ul>
+      <p class="note">
+        <strong>Atenção:</strong> o aplicativo não substitui, altera ou cria normas operacionais.
       </p>
     </div>
 
     <div class="card">
-      <h3>🗂️ Cadeia de Custódia Digital</h3>
+      <h3>Responsabilidade operacional</h3>
+      <p>
+        Este aplicativo <strong>não autoriza voo</strong>. A decisão de decolagem, condução da missão e pouso
+        é exclusiva do <strong>Piloto em Comando</strong>, que permanece integralmente responsável pela operação,
+        nos termos da legislação e da doutrina vigente.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Cadeia de custódia digital</h3>
       <p>O aplicativo registra automaticamente:</p>
       <ul>
-        <li>data e hora de início do checklist;</li>
-        <li>identificação da missão;</li>
-        <li>data e hora de conclusão de cada fase;</li>
-        <li>encerramento formal do procedimento;</li>
-        <li>declaração final de cumprimento integral do checklist;</li>
-        <li>hash SHA-256 para integridade do registro.</li>
+        <li>Data e hora de início do checklist;</li>
+        <li>Identificação da missão;</li>
+        <li>Conclusão e carimbo temporal por fase;</li>
+        <li>Encerramento formal do procedimento (normal ou antecipado);</li>
+        <li>Observações discricionárias do operador (opcional);</li>
+        <li><strong>Hash SHA-256</strong> para integridade do registro.</li>
       </ul>
     </div>
 
     <div class="card">
-      <h3>👨‍💻 Desenvolvedor</h3>
+      <h3>Desenvolvedor</h3>
       <p><strong>Raphael Serafim</strong></p>
     </div>
 
