--- a/sobre.html
+++ b/sobre.html
@@ -4,150 +4,136 @@
   <meta charset="UTF-8" />
   <title>Sobre / Doutrina — Checklist Operacional RPAS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="css/style.css" />
+  <meta name="theme-color" content="#000000" />
 
   <style>
-    /* ====== AJUSTES VISUAIS SOMENTE PARA O SOBRE ====== */
-    .about-wrap { max-width: 980px; margin: 0 auto; }
-
+    /* Ajustes finos apenas do Sobre (não afeta o app) */
     .hero {
-      background: linear-gradient(180deg, rgba(21,24,33,0.9), rgba(21,24,33,0.35));
+      background: #151821;
       border: 1px solid #2a2f3a;
       border-radius: 10px;
       padding: 18px;
-      margin-bottom: 16px;
+      margin-bottom: 18px;
     }
 
     .hero-top {
       display: flex;
-      gap: 16px;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
+      gap: 12px;
       flex-wrap: wrap;
     }
 
     .hero-title h1 {
       font-size: 22px;
-      margin: 0 0 4px;
+      margin: 0 0 6px;
     }
-    .hero-title p {
-      margin: 0;
-      opacity: 0.85;
+
+    .hero-title .sub {
       font-size: 13px;
+      opacity: 0.85;
+      margin: 0;
+    }
+
+    .hero-actions {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .btn-ghost {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 12px;
+      border-radius: 8px;
+      border: 1px solid #2a2f3a;
+      background: transparent;
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 14px;
+      cursor: pointer;
     }
 
     .logos-row {
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 22px;
-      margin: 14px 0 6px;
+      align-items: flex-end;
+      gap: 18px;
+      margin-top: 14px;
       flex-wrap: wrap;
     }
 
     .logo-small {
-      height: 64px;
+      height: 52px;
       width: auto;
       display: block;
-      filter: drop-shadow(0 2px 8px rgba(0,0,0,0.35));
+      filter: drop-shadow(0 2px 8px rgba(0,0,0,.35));
     }
 
     .logo-main {
-      height: 110px;
+      height: 86px;
       width: auto;
       display: block;
-      margin: 10px auto 4px;
-      max-width: 90%;
-      filter: drop-shadow(0 3px 12px rgba(0,0,0,0.45));
+      filter: drop-shadow(0 2px 10px rgba(0,0,0,.45));
     }
 
-    .cta {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      justify-content: flex-end;
-      flex-wrap: wrap;
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 14px;
     }
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      padding: 10px 14px;
-      border-radius: 8px;
-      border: 1px solid #2a2f3a;
-      text-decoration: none;
-      font-size: 14px;
-      cursor: pointer;
-      user-select: none;
-      white-space: nowrap;
-    }
-
-    .btn-primary {
-      background: #1a73e8;
-      color: #fff;
-      border-color: rgba(26,115,232,0.5);
-    }
-    .btn-primary:hover { filter: brightness(1.05); }
-
-    .btn-ghost {
-      background: rgba(255,255,255,0.04);
-      color: #dbe7ff;
-    }
-    .btn-ghost:hover { background: rgba(255,255,255,0.06); }
 
     .card {
-      background-color: #151821;
+      background: #151821;
       border: 1px solid #2a2f3a;
       border-radius: 10px;
-      padding: 16px 16px 14px;
-      margin: 12px 0;
+      padding: 16px;
     }
 
-    .card h2 {
-      font-size: 18px;
+    .card h2, .card h3 {
       margin: 0 0 10px;
     }
 
-    .card h3 {
-      font-size: 15px;
-      margin: 0 0 8px;
+    .card p {
+      margin: 0 0 10px;
+      line-height: 1.5;
       opacity: 0.95;
     }
 
-    .card p { margin: 8px 0; line-height: 1.45; opacity: 0.95; }
-    .card ul { margin: 8px 0 0 18px; }
-    .card li { margin: 6px 0; line-height: 1.35; opacity: 0.95; }
+    .card ul {
+      margin: 0;
+      padding-left: 18px;
+      line-height: 1.55;
+      opacity: 0.95;
+    }
 
-    .pill {
-      display: inline-block;
-      padding: 4px 10px;
-      border-radius: 999px;
+    .btn-primary-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 12px 14px;
+      border-radius: 8px;
+      background: #1a73e8;
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 14px;
+      border: none;
+    }
+
+    .muted {
+      opacity: 0.8;
+      font-size: 13px;
+    }
+
+    code.inline {
+      background: #0f1115;
       border: 1px solid #2a2f3a;
-      background: rgba(255,255,255,0.03);
-      font-size: 12px;
-      opacity: 0.9;
-      margin-top: 8px;
-    }
-
-    .warn {
-      color: #fbbc04;
-      font-weight: 700;
-    }
-
-    .mono {
+      padding: 2px 6px;
+      border-radius: 6px;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-size: 12px;
-      opacity: 0.9;
-    }
-
-    /* Em telas menores, reduz um pouco os logos */
-    @media (max-width: 520px) {
-      .logo-small { height: 54px; }
-      .logo-main { height: 92px; }
-      .hero-title h1 { font-size: 20px; }
     }
   </style>
 </head>
@@ -159,96 +145,84 @@
     <span class="header-title">Checklist Operacional RPAS</span>
   </div>
   <div class="header-right">
-    <a href="index.html" class="header-link" rel="noopener">⬅ Voltar</a>
+    <a href="index.html" class="header-link" rel="noopener">⬅ Voltar ao App</a>
   </div>
 </header>
 
 <main class="app-container">
-  <div class="about-wrap">
 
-    <!-- HERO / TOPO -->
-    <section class="hero">
-      <div class="hero-top">
-        <div class="hero-title">
-          <h1>Sobre / Doutrina</h1>
-          <p>COARP · NOARP · SAER · PCSC</p>
-          <span class="pill">PWA institucional · Checklist RPAS</span>
-        </div>
-
-        <!-- CTA: acesso ao app -->
-        <div class="cta">
-          <a class="btn btn-primary" href="index.html" rel="noopener">🚀 Acessar o Aplicativo</a>
-          <a class="btn btn-ghost" href="index.html" rel="noopener">↩ Voltar ao App</a>
-        </div>
+  <!-- HERO (sem “retângulo” extra e sem link redundante) -->
+  <section class="hero">
+    <div class="hero-top">
+      <div class="hero-title">
+        <h1>Sobre / Doutrina</h1>
+        <p class="sub">COARP · NOARP · SAER · PCSC</p>
       </div>
 
-      <!-- Logos (PCSC + SAER maiores) -->
-      <div class="logos-row" aria-label="Logos institucionais">
-        <img class="logo-small" src="assets/logos/pcsc.png" alt="Polícia Civil de Santa Catarina (PCSC)" />
-        <img class="logo-small" src="assets/logos/saer.png" alt="SAER" />
+      <div class="hero-actions">
+        <a class="btn-ghost" href="index.html" rel="noopener">↩ Voltar ao App</a>
       </div>
+    </div>
 
-      <!-- Logo principal (NOARP) -->
-      <img class="logo-main" src="assets/logos/noarp.png" alt="NOARP" />
-    </section>
+    <!-- Logos (proporção melhor e alinhados) -->
+    <div class="logos-row" aria-label="Logos institucionais">
+      <img class="logo-small" src="assets/logos/pcsc.png" alt="Polícia Civil de Santa Catarina (PCSC)" />
+      <img class="logo-small" src="assets/logos/saer.png" alt="SAER" />
+      <img class="logo-main"  src="assets/logos/noarp.png" alt="NOARP" />
+    </div>
+  </section>
 
-    <!-- CONTEÚDO DO README (em HTML) -->
-    <section class="card">
+  <!-- CONTEÚDO (do README) -->
+  <section class="cards">
+
+    <div class="card">
       <h2># Checklist Operacional RPAS</h2>
-      <p><strong>COARP · NOARP · SAER · PCSC</strong></p>
-    </section>
+      <p class="muted">COARP · NOARP · SAER · PCSC</p>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>📌 Finalidade</h3>
       <p>
         Este aplicativo (PWA) é uma ferramenta <strong>institucional</strong> destinada à execução e ao registro do
         <strong>Checklist Operacional de Aeronaves Remotamente Pilotadas (RPAS)</strong> no âmbito da Polícia Civil de Santa Catarina.
       </p>
-      <p><strong>Objetivos principais:</strong></p>
+      <p>Objetivos principais:</p>
       <ul>
         <li>padronizar a execução do checklist operacional;</li>
         <li>registrar temporalmente as fases e o encerramento;</li>
         <li>fortalecer a cadeia de custódia digital do procedimento;</li>
         <li>gerar relatório em PDF para registro e controle administrativo.</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>✅ Acesso ao Aplicativo (PWA)</h3>
-      <p>
-        Acesse pelo navegador e, se desejado, instale na tela inicial (modo aplicativo):
-      </p>
-      <p class="mono"><strong>Acesso:</strong> https://leaphar1979.github.io/checklist-rpas/</p>
-      <div style="margin-top:10px;">
-        <a class="btn btn-primary" href="https://leaphar1979.github.io/checklist-rpas/" target="_blank" rel="noopener">
-          🌐 Abrir link público
-        </a>
-      </div>
-    </section>
+      <p>Acesse pelo navegador e, se desejado, instale na tela inicial (modo aplicativo):</p>
+      <p><strong>Acesso:</strong> <code class="inline">https://leaphar1979.github.io/checklist-rpas/</code></p>
+      <a class="btn-primary-link" href="index.html" rel="noopener">🚀 Abrir o Aplicativo</a>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>⚖️ Base Normativa</h3>
-      <p>
-        O conteúdo do checklist segue <strong>integralmente</strong> a doutrina e as normativas vigentes, <strong>sem supressão ou criação de itens</strong>, em especial:
-      </p>
+      <p>O conteúdo do checklist segue <strong>integralmente</strong> a doutrina e as normativas vigentes, <strong>sem supressão ou criação de itens</strong>, em especial:</p>
       <ul>
         <li><strong>Resolução nº 05/GAB/DGPC/PCSC, de 03 de março de 2023</strong> (publicada no DOE 21975 de 08/03/2023);</li>
         <li>Doutrina COARP – Curso de Operador de Aeronaves Remotamente Pilotadas;</li>
         <li>Diretrizes NOARP / SAER / PCSC;</li>
         <li>Normas ANAC, DECEA e ANATEL aplicáveis ao uso de RPAS.</li>
       </ul>
-      <p class="warn">⚠️ Este aplicativo não substitui normas operacionais, não cria doutrina e não autoriza voo.</p>
-    </section>
+      <p><strong>⚠️ Este aplicativo não substitui normas operacionais, não cria doutrina e não autoriza voo.</strong></p>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>🧭 Responsabilidade Operacional</h3>
       <p>
-        A decisão de decolagem, condução da missão e pouso é <strong>exclusiva do Piloto em Comando</strong>, que permanece integralmente responsável pela operação da aeronave,
-        nos termos da legislação e da doutrina vigente.
+        A decisão de decolagem, condução da missão e pouso é <strong>exclusiva do Piloto em Comando</strong>,
+        que permanece integralmente responsável pela operação da aeronave, nos termos da legislação e da doutrina vigente.
       </p>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>🗂️ Cadeia de Custódia Digital e Integridade</h3>
       <p>O aplicativo registra automaticamente:</p>
       <ul>
@@ -260,9 +234,9 @@
         <li>hash SHA-256 do registro (integridade).</li>
       </ul>
       <p>O relatório PDF é gerado para <strong>uso administrativo interno</strong>, conforme diretrizes institucionais.</p>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>🔢 Numeração do Checklist</h3>
       <p>A numeração oficial:</p>
       <ul>
@@ -270,20 +244,20 @@
         <li>pode ser exibida no PDF quando necessário;</li>
         <li>pode não ser exibida na interface por decisão de usabilidade, sem alterar conteúdo, ordem ou doutrina.</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>🔒 Uso Institucional e Restrições</h3>
-      <p><strong>Uso exclusivamente institucional</strong> (NOARP/SAER/PCSC).</p>
-      <p><strong>É vedado:</strong></p>
+      <p>Uso <strong>exclusivamente institucional</strong> (NOARP/SAER/PCSC).</p>
+      <p>É <strong>vedado</strong>:</p>
       <ul>
         <li>divulgar externamente;</li>
         <li>compartilhar arquivos/relatórios fora dos canais autorizados;</li>
         <li>reproduzir, modificar ou distribuir o aplicativo sem autorização formal da gestão competente.</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>🛠️ Tecnologias</h3>
       <ul>
         <li>HTML5, CSS3, JavaScript (Vanilla)</li>
@@ -291,23 +265,18 @@
         <li>localStorage (armazenamento local)</li>
         <li>PWA (Service Worker + Manifest)</li>
       </ul>
-      <p><strong>Compatível com:</strong></p>
-      <ul>
-        <li>Android / iOS (Safari / Chrome)</li>
-        <li>tablet</li>
-        <li>computador</li>
-      </ul>
-    </section>
+      <p class="muted">Compatível com Android / iOS (Safari / Chrome), tablet e computador.</p>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>👤 Contato do Desenvolvedor</h3>
       <p>
         Desenvolvedor: <strong>Raphael Serafim</strong> — Agente de Polícia (PCSC)<br/>
         Contato (Telegram): <strong>@Leapharr</strong>
       </p>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h3>📄 Atualizações</h3>
       <p>O projeto poderá sofrer atualizações futuras, exclusivamente para:</p>
       <ul>
@@ -316,9 +285,10 @@
         <li>correções técnicas.</li>
       </ul>
       <p>Qualquer alteração de conteúdo operacional dependerá de orientação formal da gestão competente.</p>
-    </section>
+    </div>
 
-  </div>
+  </section>
+
 </main>
 
 </body>
